Fixed component events byline wrap and display on homepage

--- a/src/components/c-calendar-icon/style.styl
+++ b/src/components/c-calendar-icon/style.styl
@@ -22,7 +22,7 @@
   &--dow {
     background-color: $boxBg;
     font-size: $smallCopy;
-    padding-top: $spacing*.2;
+    padding: $spacing*1 0;
   }
   &--dom {
     font-size: $crust;
@@ -43,7 +43,6 @@
       column(1/3);
       float:left;
     }
-    margin-right: $spacing*2;
   }
 
   .c-events-item-list & {
