--- a/src/components/c-events-item-byline/style.styl
+++ b/src/components/c-events-item-byline/style.styl
@@ -4,7 +4,7 @@
 .c-events-item-byline {
   +above('m') {
   float:left;
-  column(2/3);
+  column(1);
   }
 
   column(1);
@@ -40,16 +40,37 @@
     address {
     }
   }
-
+  &__location {
+    h2 {
+      margin-bottom: 0;
+    }
+  }
     &__details {
       clear: both;
     }
   }
 
   .c-events-item-homepage & {
-      column(1);
+      +above('m') {
+      column(1/2);
+      }
       h1 {
         font-size: $innerCore;
       }
+    }
+
+  .c-events-item-list & {
+      +above('m') {
+      column(1);
+      float:left;
+
+      .c-events-item-byline {
+        +above('m') {
+        column(2/3);
+        margin-right: 0;
+        }
+        }
+      }
+
     }
 /* PARENT OVERIDES */
